--- a/main.html
+++ b/main.html
@@ -1,16 +1,38 @@
-<!DOCTYPE html>
+<form>
+<label for="name">Name:</label>
+<input type="text" id="name" name="name" required placeholder="Name"><br>
 
-<html>
+<label for="email">Email:</label>
+<input type="email" id="email" name="email" required placeholder="Email"><br>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+<label for="gender">Gender:</label>
+<input type="radio" id="gender_m" name="gender" value="male" required>
+<label for="gender_m">Male</label>
+<input type="radio" id="gender_f" name="gender" value="female" required>
+<label for="gender_f">Female</label><br>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<label for="cars">Car Brands:</label>
+<select id="cars" name="cars" required>
+<option value="">--Please choose an option--</option>
+<option value="Toyota">Toyota</option>
+<option value="Ford">Ford</option>
+<option value="Honda">Honda</option>
+</select><br>
 
-</body>
+<label for="age">Age:</label>
+<input type="number" id="age" name="age" required placeholder="Age"><br>
 
-</html>
+<label for="dob">DOB:</label>
+<input type="date" id="dob" name="dob" required><br>
+
+<label for="tel">Phone Number:</label>
+<input type="tel" id="tel" name="tel" required placeholder="xxx-xxx-xxxx"><br>
+
+<label for="password">Password:</label>
+<input type="password" id="password" name="password" required placeholder="Password"><br>
+
+<label for="tos">I agree to the TOS:</label>
+<input type="checkbox" id="tos" name="tos" required><br>
+
+<input type="submit" value="Submit">
+</form>
