--- a/main.html
+++ b/main.html
@@ -1,15 +1,15 @@
-<form>
+<form method="post">
 <label for="name">Name:</label>
-<input type="text" id="name" name="name" required placeholder="Name"><br><br>
+<input type="text" id="name" name="name" required placeholder="Name"><br>
 
 <label for="email">Email:</label>
-<input type="email" id="email" name="email" required placeholder="Email"><br><br>
+<input type="email" id="email" name="email" required placeholder="Email"><br>
 
-<label for="gender">Gender:</label>
+<label for="gender_m">Gender:</label>
 <input type="radio" id="gender_m" name="gender" value="male" required>
 <label for="gender_m">Male</label>
 <input type="radio" id="gender_f" name="gender" value="female" required>
-<label for="gender_f">Female</label><br><br>
+<label for="gender_f">Female</label><br>
 
 <label for="cars">Car Brands:</label>
 <select id="cars" name="cars" required>
@@ -17,22 +17,22 @@
 <option value="Toyota">Toyota</option>
 <option value="Ford">Ford</option>
 <option value="Honda">Honda</option>
-</select><br><br>
+</select><br>
 
 <label for="age">Age:</label>
-<input type="number" id="age" name="age" required placeholder="Age"><br><br>
+<input type="number" id="age" name="age" required placeholder="Age"><br>
 
 <label for="dob">DOB:</label>
-<input type="date" id="dob" name="dob" required><br><br>
+<input type="date" id="dob" name="dob" required><br>
 
 <label for="tel">Phone Number:</label>
-<input type="tel" id="tel" name="tel" required placeholder="xxx-xxx-xxxx"><br><br>
+<input type="tel" id="tel" name="tel" required placeholder="xxx-xxx-xxxx"><br>
 
 <label for="password">Password:</label>
-<input type="password" id="password" name="password" required placeholder="Password"><br><br>
+<input type="password" id="password" name="password" required placeholder="Password"><br>
 
 <label for="tos">I agree to the TOS:</label>
-<input type="checkbox" id="tos" name="tos" required><br><br>
+<input type="checkbox" id="tos" name="tos" required><br>
 
-<input type="submit" value="Submit">
+<button type="submit">Submit</button>
 </form>
